deploy/alpine.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine
  labels:
    app: alpine
spec:
  containers:
    - name: alpine
      image: yusuo/alpine:latest
      command: ["/bin/sh"]
      args: ["-c", "while true; do echo hello; sleep 10; done"]
      securityContext:
        capabilities:
          add:
          - NET_ADMIN
